[package]
authors = ["Sean McArthur <sean@seanmonstar.com>"] 
autoexamples = true 
autotests = true 
categories = ["web-programming::http-server"] 
description = "serve the web at warp speeds" 
documentation = "https://docs.rs/warp" 
edition = "2018" 
keywords = ["warp", "server", "http", "hyper"] 
license = "MIT" 
name = "warp" 
readme = "README.md" 
repository = "https://github.com/seanmonstar/warp" 
version = "0.2.5" # don't forget to update html_root_url

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-compression = {version = "0.3.1", features = ["brotli", "deflate", "gzip", "stream"], optional = true}
bytes = "0.5"
futures = {version = "0.3", default-features = false, features = ["alloc"]}
headers = "0.3"
http = "0.2"
hyper = {version = "0.13", features = ["stream"]}
log = "0.4"
mime = "0.3"
mime_guess = "2.0.0"
multipart = {version = "0.17", default-features = false, features = ["server"], optional = true}
percent-encoding = "2.1"
pin-project = "1.0"
scoped-tls = "1.0"
serde = "1.0"
serde-xml-rs = "0.4.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = {version = "0.2", features = ["fs", "stream", "sync", "time"]}
tokio-rustls = {version = "0.14", optional = true}
tower-service = "0.3"
tracing = {version = "0.1", default-features = false, features = ["log", "std"]}
tracing-futures = {version = "0.2", default-features = false, features = ["std-future"]}
# tls is enabled by default, we don't want that yet
tokio-tungstenite = {version = "0.11", default-features = false, optional = true}

[dev-dependencies]
handlebars = "3.0.0"
listenfd = "0.3"
pretty_env_logger = "0.4"
serde_derive = "1.0"
tokio = {version = "0.2", features = ["macros"]}
tracing-log = "0.1"
tracing-subscriber = "0.2.7"

[features]
compression = ["async-compression"]
default = ["multipart", "websocket"]
tls = ["tokio-rustls"]
websocket = ["tokio-tungstenite"]

[profile.release]
codegen-units = 1
incremental = false

[profile.bench]
codegen-units = 1
incremental = false

[[test]]
name = "multipart"
required-features = ["multipart"]

[[test]]
name = "ws"
required-features = ["websocket"]

[[example]]
name = "compression"
required-features = ["compression"]

[[example]]
name = "unix_socket"
required-features = ["tokio/uds"]

[[example]]
name = "websockets"
required-features = ["websocket"]

[[example]]
name = "websockets_chat"
required-features = ["websocket"]

[[example]]
name = "query_string"
